<resources>
    <!--Main Activity-->
    <string name="app_name">Kotlin Quiz App</string>
    <string name="finishedQuiz">Your have finished the quiz!</string>
    <string name="highScore">Your score is:</string>
    <string name="buttonStartQuiz">Start</string>
    <string name="buttonOpenQuestions">See ALL Questions</string>

    <!--Quiz Activity-->
    <string name="question">Question field</string>
    <string name="score">Score: 0</string>
    <string name="total_questions">Question: 1/?</string>
    <string name="button_next">Next</string>
    <string name="finish">Finish</string>

    <string name="correct_ans_1">Answer 1 is correct</string>
    <string name="correct_ans_2">Answer 2 is correct</string>
    <string name="correct_ans_3">Answer 3 is correct</string>
    <string name="correct_ans_4">Answer 4 is correct</string>

    <!-- Question Content -->
    <string name="button_additionContent">Click on item to see the answer</string>

</resources>